Bug 41697 - crash in _tp_contacts_from_values
Summary: crash in _tp_contacts_from_values
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-11 13:27 UTC by Guillaume Desmottes
Modified: 2011-10-12 02:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
_tp_contacts_from_values: skip NULL contacts (974 bytes, patch)
2011-10-11 14:39 UTC, Guillaume Desmottes
Details | Splinter Review
_tp_contacts_from_values: skip NULL contacts (1.25 KB, patch)
2011-10-11 14:45 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2011-10-11 13:27:31 UTC
Original bug report: https://bugzilla.gnome.org/show_bug.cgi?id=661158

#0  0x00007f4961df4735 in raise () from /lib/libc.so.6
#1  0x00007f4961df5bab in abort () from /lib/libc.so.6
#2  0x00007f49623890c2 in g_assertion_message (domain=<optimized out>, file=0x7f496a19040a "util.c", line=<optimized out>, 
    func=0x7f496a19bc80 "_tp_contacts_from_values", message=<optimized out>) at gtestutils.c:1425
#3  0x00007f4962389607 in g_assertion_message_expr (domain=0x7f496a16c0c2 "tp-glib", file=0x7f496a19040a "util.c", line=1961, 
    func=0x7f496a19bc80 "_tp_contacts_from_values", expr=<optimized out>) at gtestutils.c:1436
#4  0x00007f496a1558be in _tp_contacts_from_values (table=<optimized out>) at util.c:1961
#5  0x00007f496a0c6d9b in _tp_channel_contacts_handle_owners_changed (self=0x2ab4250, added=0x2ac9800, removed=0x2a23020, 
    identifiers=0x2ac9860) at channel-contacts.c:722
#6  0x00007f496a0c8352 in tp_channel_handle_owners_changed_detailed_cb (self=0x2ab4250, added=0x2ac9800, removed=0x2a23020, 
    identifiers=0x2ac9860, user_data=<optimized out>, weak_object=<optimized out>) at channel-group.c:1247
#7  0x00007f496a0a77ae in _tp_cli_channel_interface_group_invoke_callback_for_handle_owners_changed_detailed (tpproxy=0x2ab4250, 
    error=<optimized out>, args=0x2aea320, generic_callback=0x7f496a0c8312 <tp_channel_handle_owners_changed_detailed_cb>, user_data=0x0, 
    weak_object=0x0) at _gen/tp-cli-channel-body.h:2773
#8  0x00007f496a149808 in tp_proxy_signal_invocation_run (p=0x2a6cd60) at proxy-signals.c:266
#9  0x00007f4962364fe1 in g_idle_dispatch (source=<optimized out>, callback=<optimized out>, user_data=<optimized out>) at gmain.c:4801
#10 0x00007f4962368f8c in g_main_dispatch (context=0x1489f90) at gmain.c:2441
#11 g_main_context_dispatch (context=0x1489f90) at gmain.c:3011
#12 0x00007f496236954b in g_main_context_iterate (context=0x1489f90, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3089
#13 0x00007f4962369b02 in g_main_loop_run (loop=0x26f0af0) at gmain.c:3297
#14 0x00007f496656f7ed in gtk_main () from /usr/lib/libgtk-3.so.0
#15 0x00007f496361282e in g_application_run (application=0x15859a0, argc=1, argv=0x7fff84007608) at gapplication.c:1323
#16 0x0000000000457fff in main (argc=1, argv=0x7fff84007608) at empathy.c:838
Comment 1 Guillaume Desmottes 2011-10-11 14:39:04 UTC
Created attachment 52238 [details] [review]
_tp_contacts_from_values: skip NULL contacts

dup_owners_table() can insert NULL contacts into the hash (if the owner is
unknown) so we should just ignore those.
Comment 2 Guillaume Desmottes 2011-10-11 14:45:58 UTC
Created attachment 52239 [details] [review]
_tp_contacts_from_values: skip NULL contacts

dup_owners_table() can insert NULL contacts into the hash (if the owner is
unknown) so we should just ignore those.
Comment 3 Guillaume Desmottes 2011-10-11 14:51:14 UTC
Fixed in master; will be in 0.15.8
Comment 4 Will Thompson 2011-10-12 02:34:17 UTC
(In reply to comment #3)
> Fixed in master; will be in 0.15.8

Actually, I messed up releasing 0.15.8; it will be in 0.15.9.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.