_tp_contacts_from_values: skip NULL contacts

dup_owners_table() can insert NULL contacts into the hash (if the owner is
unknown) so we should just ignore those.

https://bugs.freedesktop.org/show_bug.cgi?id=41697